--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+<nav class="navbar navbar-expand-lg navbar-dark bg-success">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img class="logo" src="../../assets/FinalprojectLogo.png" width="60" height="50" ></a>
+    <a class="navbar-brand" href="#"><img class="logo" src="./assets/images/FinalprojectLogo.png" width="60" height="50" ></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -14,58 +14,55 @@
           <a class="nav-link" routerLink="login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="user">AllUSERS</a>
-        </li>
-      
+        <div class="emo">
+          <a class="nav-link " routerLink="user">AllUSERS</a>
+        </div>
+      </li>
       </ul>
       
     </div>
   </div>
 </nav>
-<body>
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../../assets/biryani.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Chicken Biryani</h5>
-          <!-- <p>Some representative placeholder content for the first slide.</p> -->
+
+<div class="container">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+	        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	        <li data-target="#myCarousel" data-slide-to="1"></li>
+	        <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        
+        <div class="carousel-inner">
+            <div class="item active">
+            <img src="./assets/images/biryani.jpg" alt="pet" style="width:100%">
+            </div>
+            
+           <div class="item">
+            <img src="./assets/images/batter.jpg" alt="computer" style="width:100%">
+            </div>
+            
+            <div class="item">
+            <img src="./assets/images/tandoori.jpg" alt="animal" style="width:100%">
+            </div> 
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../../assets/batter.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Chicken Wings</h5>
-          <!-- <p>Some representative placeholder content for the second slide.</p> -->
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../../assets/tandoori.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Chicken Kabab</h5>
-          <!-- <p>Some representative placeholder content for the third slide.</p> -->
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+        
+       <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+       <span class="glyphicon glyphicon-chevron-left"></span>
+       <span class="sr-only">Previous</span>
+       </a> 
+       
+       <a class="right carousel-control" href="#myCarousel" data-slide="next">
+       <span class="glyphicon glyphicon-chevron-right"></span>
+       <span class="sr-only">Next</span>
+       </a> 
+  
   </div>
-</body>
+</div>
+
 
 <div class="FooterSection">
     <p>Copy Right@2023&nbsp;&nbsp;&nbsp;&nbsp;</p>
-    <p>Follow us on</p><a href="https://www.facebook.com/" target="_blank">&nbsp;&nbsp;<i class="fa-brands fa-facebook"></i></a><a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+    <p>Follow us on</p><a href="https://www.facebook.com/" target="_blank">&nbsp;&nbsp;<i class="fa fa-facebook-square"></i></a><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i></a>
     <p>Contact us Via &nbsp;&nbsp;</p> <a href="https://www.whatsapp.com/" target="_blank">
-      <i class="fa-brands fa-whatsapp"></i></a>
+      <i class="fa fa-whatsapp"></i></a>
     </div>  
