Search code Ready

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -59,6 +59,12 @@
   </div>
 </div>
 
+<form action="/search">
+ 
+  <input type="search" id="gsearch" name="gsearch">
+  <button routerLink="search" class="btn btn-primary"> Search</button>
+</form>
+
 
 <div class="FooterSection">
     <p>Copy Right@2023&nbsp;&nbsp;&nbsp;&nbsp;</p>
