--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-
+<!-- USer code -->
 <table  class="table table-bordered">
     <tr class="effect2">
         <th>User Id</th>
@@ -68,6 +68,7 @@
 </form>
 <br><br><br><br>
 
+<!-- Food code -->
 <table  class="table table-bordered">
     <tr class="effect2">
         <th>Food Id</th>
@@ -179,6 +180,7 @@
 </div>
 
     <br><br><br><br>
+    <!-- Search code -->
     <div >
         
             <label>Search by Food Item:</label>
@@ -214,6 +216,7 @@
   </div>
   <br><br><br><br>
   <br><br><br><br>
+  <!-- Cart code -->
   <table class="table table-bordered table-stripped table-hover">
     <thead class="text-white bg-dark">
       <tr >
