--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,6 +17,9 @@
           <a class="nav-link" routerLink="usercart">Cart</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="menu">Menu</a>
+        </li>
+        <li class="nav-item">
         <div class="emo">
           <a class="nav-link " routerLink="user">AllUSERS</a>
         </div>
